--- a/Day01_Python_Review_and_Intro_to_Pandas.ipynb
+++ b/Day01_Python_Review_and_Intro_to_Pandas.ipynb
@@ -249,11 +249,11 @@
         "    - Text Cells\n",
         "    - Code Cells\n",
         "- Markdown Basics\n",
-        "    - headings\n",
+        "    - headings (#, ##, ####)\n",
         "    - new line\n",
-        "    - bold\n",
-        "    - code\n",
-        "    - italics\n",
+        "    - **bold**\n",
+        "    - `code`\n",
+        "    - *italics*\n",
         "    - lists and bullet points\n",
         "- Running Cells\n",
         "    - `shift + return`\n",
