--- a/notebook3_landowska.ipynb
+++ b/notebook3_landowska.ipynb
@@ -54,12 +54,12 @@
       ],
       "metadata": {
         "id": "kf1k35nmN15u",
-        "outputId": "8a7bbbb1-38f6-4931-a687-d49efafd4302",
+        "outputId": "24d93710-a59a-4cd0-94ea-5ebd01127904",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "NU2OlQdUN7hg"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -102,12 +102,13 @@
         "    #   (we assume that number of elements in actual and predicted match)\n",
         "    # OUTPUT: \n",
         "    #   the mean squared error between the actual and predicted values\n",
-        "    print(\"your code goes here\")"
+        "    mean_squared_error = np.squared(actual-predicted)\n",
+        "    return mean_squared_error"
       ],
       "metadata": {
         "id": "lKq5w184O8Zc"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -124,15 +125,17 @@
       "cell_type": "code",
       "source": [
         "# change the path so to access the data on your drive \n",
-        "wine_data = pandas.read_csv('/content/drive/MyDrive/CS167/datasets/winequality-white.csv')\n",
+        "wine_data = pandas.read_csv('/content/drive/MyDrive/winequality-white.csv')\n",
         "\n",
         "# establish test_data and train_data here\n",
-        "\n"
+        "shuffled_data = wine_data.sample(frac=1)\n",
+        "test_data = shuffled_data.iloc[0:320]\n",
+        "train_data = shuffled_data.iloc[320:]\n"
       ],
       "metadata": {
         "id": "oyoxRCKmPtE4"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -171,7 +174,7 @@
       "metadata": {
         "id": "WLhN_9bWQFu3"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -190,7 +193,7 @@
       "metadata": {
         "id": "1KClR8Z2QsyC"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -223,7 +226,7 @@
       "metadata": {
         "id": "ZbpecOIJQxMv"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -261,6 +264,15 @@
       ],
       "metadata": {
         "id": "usRm6g4-Q_uS"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NSYXoGCu9AaE"
       },
       "execution_count": null,
       "outputs": []
