--- a/Day09_Decision_Trees_II.ipynb
+++ b/Day09_Decision_Trees_II.ipynb
@@ -49,10 +49,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 16,
       "metadata": {
         "id": "MQNDEe9SHw-z",
-        "outputId": "cad49d4e-d47f-4631-c7a1-af4f2823c3df",
+        "outputId": "0df95f34-2948-4f83-fd9b-d42312006416",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -73,10 +73,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 17,
       "metadata": {
         "id": "ifxjI9A0Hw-3",
-        "outputId": "864307f8-2a73-4406-d761-13b69ae95a38",
+        "outputId": "fc5eac51-360c-4c58-cdf0-1950ab6c1ef4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -96,7 +96,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-af31d35a-dd2d-46cb-8190-d7866c95e7c2\">\n",
+              "  <div id=\"df-cde73a37-6bb9-4c93-8bed-b11535aed219\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -203,7 +203,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af31d35a-dd2d-46cb-8190-d7866c95e7c2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cde73a37-6bb9-4c93-8bed-b11535aed219')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -254,12 +254,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-af31d35a-dd2d-46cb-8190-d7866c95e7c2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-cde73a37-6bb9-4c93-8bed-b11535aed219 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-af31d35a-dd2d-46cb-8190-d7866c95e7c2');\n",
+              "          const element = document.querySelector('#df-cde73a37-6bb9-4c93-8bed-b11535aed219');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -282,7 +282,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 17
         }
       ],
       "source": [
@@ -520,10 +520,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 18,
       "metadata": {
         "id": "zl6uVDB_Hw_K",
-        "outputId": "c95d9979-d5a6-4d12-d22b-644807d3f654",
+        "outputId": "f57d756e-3d89-4c1e-886a-77e039f3839f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -537,7 +537,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 18
         }
       ],
       "source": [
@@ -556,10 +556,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 19,
       "metadata": {
         "id": "BZ6UMuqzHw_L",
-        "outputId": "1e66f824-aec2-4c2f-eaaf-bfa19e8cb35a",
+        "outputId": "ecc21e9e-0df3-4e66-9f21-a9da1b10c143",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -589,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 20,
       "metadata": {
         "id": "xdv3t3VGHw_L"
       },
@@ -608,10 +608,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "metadata": {
         "id": "3VV2vwxYHw_M",
-        "outputId": "82381987-1c74-4d51-9202-9fefb48cd0d6",
+        "outputId": "746e1bcb-bffd-4975-87e3-b9bb199100c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -625,7 +625,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 21
         }
       ],
       "source": [
@@ -635,10 +635,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 34,
       "metadata": {
         "id": "zHVp8VtjHw_M",
-        "outputId": "1dc13de9-36d1-4a15-d459-4176b546a332",
+        "outputId": "a4b98a57-a2bc-4120-f76d-9b7bee176d5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -648,15 +648,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.5"
+              "0.041391147733641054"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 34
         }
       ],
       "source": [
-        "entropy([1/4, 1/4, 2/4])"
+        "entropy([1/4, 1/4, 2/4])\n",
+        "\n",
+        "7/13*entropy([4/7,3/7])+6/13*entropy([2/6,4/6])\n",
+        "\n",
+        "entropy([7/13,6/13]) - (7/13*entropy([4/7,3/7])+6/13*entropy([2/6,4/6]))"
       ]
     },
     {
@@ -678,10 +682,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {
         "id": "WO-paWxzHw_N",
-        "outputId": "0f50145d-e444-4201-f52d-869eedcc7b03",
+        "outputId": "9aa18c57-7a6d-40c3-d584-614635301204",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 421
@@ -708,7 +712,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e76c52b0-a790-4805-b4aa-d3195035eea1\">\n",
+              "  <div id=\"df-26d00922-f93a-40fc-95aa-d645f395e0a0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -796,7 +800,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e76c52b0-a790-4805-b4aa-d3195035eea1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-26d00922-f93a-40fc-95aa-d645f395e0a0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -847,12 +851,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e76c52b0-a790-4805-b4aa-d3195035eea1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-26d00922-f93a-40fc-95aa-d645f395e0a0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e76c52b0-a790-4805-b4aa-d3195035eea1');\n",
+              "          const element = document.querySelector('#df-26d00922-f93a-40fc-95aa-d645f395e0a0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -875,7 +879,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 23
         }
       ],
       "source": [
@@ -920,10 +924,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
       "metadata": {
         "id": "ec3KzpL7Hw_O",
-        "outputId": "1cf8fb4c-05fd-46e0-9b1f-5a00c2343a5d",
+        "outputId": "56fec09f-1e7f-472c-a702-4bdb094ccc57",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -947,10 +951,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {
         "id": "RpKEYOfXHw_P",
-        "outputId": "cc7710f0-c4ad-44a8-c3a8-d5d563f9f639",
+        "outputId": "dd08d622-28d0-4450-dae3-7e711385ee47",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -964,7 +968,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 25
         }
       ],
       "source": [
@@ -992,10 +996,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 26,
       "metadata": {
         "id": "tW7fQhB8Hw_y",
-        "outputId": "4821d407-b2d0-4521-eb3b-df249181587c",
+        "outputId": "723a77f9-06d1-41dd-fe9f-78a5bf55a2a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1009,7 +1013,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 26
         }
       ],
       "source": [
@@ -1031,10 +1035,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 27,
       "metadata": {
         "id": "vOvVT87_Hw_y",
-        "outputId": "872efade-71d8-4a2f-a2ce-0d9957633591",
+        "outputId": "6b6cde65-0d9a-4562-ace7-b3a68b4928bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 421
@@ -1061,7 +1065,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3eb4c8ef-c574-4eda-93da-eaa8827fb080\">\n",
+              "  <div id=\"df-7d9de753-4804-466a-8a36-67d9d3dc5bd1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1149,7 +1153,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3eb4c8ef-c574-4eda-93da-eaa8827fb080')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7d9de753-4804-466a-8a36-67d9d3dc5bd1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1200,12 +1204,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3eb4c8ef-c574-4eda-93da-eaa8827fb080 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7d9de753-4804-466a-8a36-67d9d3dc5bd1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3eb4c8ef-c574-4eda-93da-eaa8827fb080');\n",
+              "          const element = document.querySelector('#df-7d9de753-4804-466a-8a36-67d9d3dc5bd1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1228,7 +1232,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 27
         }
       ],
       "source": [
