--- a/notebook4_landowska.ipynb
+++ b/notebook4_landowska.ipynb
@@ -52,10 +52,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fWJ8-XD8OzPx",
-        "outputId": "10e8d4d3-15e3-4a16-87c2-7c61250ad258",
+        "outputId": "d3589c85-2954-479d-e5b6-55cc6e91beb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 484
         }
       },
       "source": [
@@ -70,10 +70,10 @@
         "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "songs = pandas.read_csv('/content/drive/MyDrive/CS167/datasets/spotify.csv') # change this to match your dataset directory\n",
+        "songs = pandas.read_csv('/content/drive/MyDrive/spotify.csv') # change this to match your dataset directory\n",
         "songs.head()"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-df540bc5-cd98-424e-be79-d3661350c399\">\n",
+              "  <div id=\"df-ea53fde5-8976-4f45-bf10-fd3e785ce511\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -315,7 +315,7 @@
               "</table>\n",
               "<p>5 rows × 22 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df540bc5-cd98-424e-be79-d3661350c399')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ea53fde5-8976-4f45-bf10-fd3e785ce511')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -366,12 +366,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-df540bc5-cd98-424e-be79-d3661350c399 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ea53fde5-8976-4f45-bf10-fd3e785ce511 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-df540bc5-cd98-424e-be79-d3661350c399');\n",
+              "          const element = document.querySelector('#df-ea53fde5-8976-4f45-bf10-fd3e785ce511');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -394,7 +394,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 24
         }
       ]
     },
@@ -402,10 +402,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "exaUcSQxI5FU",
-        "outputId": "9d345fda-7a55-4896-8dc6-f1b4484d6121",
+        "outputId": "52b04a96-7d05-4938-8578-808f4432d7d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 204
         }
       },
       "source": [
@@ -417,7 +417,7 @@
         "train_data, test_data, train_sln, test_sln = train_test_split(songs[predictors], songs[target], test_size = 0.2, random_state=41)\n",
         "train_data.head()"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +439,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-74fe5159-15e7-4c55-baf9-a16841953e34\">\n",
+              "  <div id=\"df-49ce9d46-5e1b-4e81-9a27-a9684af164c0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -540,7 +540,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-74fe5159-15e7-4c55-baf9-a16841953e34')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-49ce9d46-5e1b-4e81-9a27-a9684af164c0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -591,12 +591,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-74fe5159-15e7-4c55-baf9-a16841953e34 button.colab-df-convert');\n",
+              "          document.querySelector('#df-49ce9d46-5e1b-4e81-9a27-a9684af164c0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-74fe5159-15e7-4c55-baf9-a16841953e34');\n",
+              "          const element = document.querySelector('#df-49ce9d46-5e1b-4e81-9a27-a9684af164c0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -619,7 +619,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 25
         }
       ]
     },
@@ -630,79 +630,161 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c166290a-c6f2-4eb0-d5b8-98cd147f49e6"
+        "outputId": "6e564156-ae37-487c-a46a-09b9401e263e"
       },
       "source": [
-        "# w-kNN with small k\n"
+        "# w-kNN with small k\n",
+        "knn = neighbors.KNeighborsRegressor()\n",
+        "knn.fit(train_data, train_sln)\n",
+        "predictions = knn.predict(test_data)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, predictions))"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-1.6624706117604808"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.02547694660921196\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o1q07BzTOjnE"
+        "id": "o1q07BzTOjnE",
+        "outputId": "a1ad8446-43b5-43e7-933c-d0ecfed2b61e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# w-kNN with large k\n"
+        "# w-kNN with large k\n",
+        "knn = neighbors.KNeighborsRegressor(n_neighbors=50)\n",
+        "knn.fit(train_data, train_sln)\n",
+        "predictions = knn.predict(test_data)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.04904983324768164\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S5kncBKlOrhc"
+        "id": "S5kncBKlOrhc",
+        "outputId": "d7b127db-6bc2-4409-a0e6-0f49bf29cac0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# decision tree with default paramters\n"
+        "# decision tree with default paramters\n",
+        "dt = tree.DecisionTreeRegressor()\n",
+        "dt.fit(train_data, train_sln)\n",
+        "dt_predictions = dt.predict(test_data)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, dt_predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.3086231160608973\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7QDjUeiyOt53"
+        "id": "7QDjUeiyOt53",
+        "outputId": "955f6f06-a5f4-4ecd-b65d-61e95b507bcc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# decision tree with some kind of parameter that (hopefully) results in a smaller tree\n"
+        "# decision tree with some kind of parameter that (hopefully) results in a smaller tree\n",
+        "dt = tree.DecisionTreeRegressor(max_features=5)\n",
+        "dt.fit(train_data, train_sln)\n",
+        "dt_predictions = dt.predict(test_data)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, dt_predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.27661075361094123\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Random Forest with default parameters\n"
+        "# Random Forest with default parameters\n",
+        "from sklearn import ensemble\n",
+        "rf = ensemble.RandomForestRegressor()\n",
+        "rf.fit(train_data, train_sln)\n",
+        "rf_predictions = rf.predict(test_data)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, rf_predictions))\n"
       ],
       "metadata": {
-        "id": "94c7_lokK7Dg"
+        "id": "94c7_lokK7Dg",
+        "outputId": "f4dca8d3-b7e6-43f5-eb25-75fad2382429",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.6475305642565035\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Random Forest with change to the number of trees\n"
+        "# Random Forest with change to the number of trees\n",
+        "rf = ensemble.RandomForestRegressor(n_estimators=10)\n",
+        "rf.fit(train_data, train_sln)\n",
+        "rf_predictions = rf.predict(test_data)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, rf_predictions))"
       ],
       "metadata": {
-        "id": "OCPBb2teLAQm"
+        "id": "OCPBb2teLAQm",
+        "outputId": "3f333e71-0b27-43a3-f379-0df0df32dbf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.6063117993470901\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -717,16 +799,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y1-4z4VHOxBt"
+        "id": "Y1-4z4VHOxBt",
+        "outputId": "4cd68a87-2ce7-45b6-ae80-6c7863daf619",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# normalize the data\n",
+        "scaler = StandardScaler()\n",
+        "scaler.fit(train_data)\n",
+        "train_data_normalized = scaler.transform(train_data)\n",
+        "test_data_normalized = scaler.transform(test_data)\n",
         "\n",
-        "\n",
-        "# run a w-knn\n"
+        "# run a w-knn\n",
+        "knn = neighbors.KNeighborsRegressor()\n",
+        "knn.fit(train_data_normalized, train_sln)\n",
+        "predictions = knn.predict(test_data_normalized)\n",
+        "print(\"R2: \", metrics.r2_score(test_sln, predictions))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "R2:  0.46603123411941894\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -741,13 +842,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Since Random Forest fits a number of classifying decision trees on various sub-samples of the dataset and uses averaging to improve the predictive accuracy and control over-fitting, it preformed the best. \n",
+        "\n",
+        "Normalizing the data improved the performance and training stability of the model as all the parameters are transformed to be on the same scale. "
+      ],
       "metadata": {
-        "id": "6wiprnwyLTCj"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "qS7l6s2K5jXl"
+      }
     }
   ]
 }
